--- a/analyse.ipynb
+++ b/analyse.ipynb
@@ -33812,6 +33812,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -33851,40 +33852,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 351,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'statsmodels.api' has no attribute 'add_factor'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32md:\\workflow\\Achraf\\analyse.ipynb Cell 62\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/workflow/Achraf/analyse.ipynb#Y130sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m factor \u001b[39m=\u001b[39m sm\u001b[39m.\u001b[39;49madd_factor(\u001b[39m'\u001b[39m\u001b[39mFactor\u001b[39m\u001b[39m'\u001b[39m, [\u001b[39m'\u001b[39m\u001b[39mItem1\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mItem2\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mItem3\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/workflow/Achraf/analyse.ipynb#Y130sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# Create a CFA model\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/workflow/Achraf/analyse.ipynb#Y130sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m model \u001b[39m=\u001b[39m sm\u001b[39m.\u001b[39mModel(df_2)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'statsmodels.api' has no attribute 'add_factor'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "factor = sm.add_factor('Factor', ['Item1', 'Item2', 'Item3'])\n",
+    "# factor = sm.add_factor('Factor', ['Item1', 'Item2', 'Item3'])\n",
     "\n",
-    "# Create a CFA model\n",
-    "model = sm.Model(df_2)\n",
-    "model.add_model(factor)\n",
+    "# model = sm.Model(df_2)\n",
+    "# model.add_model(factor)\n",
     "\n",
-    "# Fit the model\n",
-    "result = model.fit()\n",
+    "# result = model.fit()\n",
     "\n",
-    "# Get the factor loadings and residual variances\n",
-    "factor_loadings = result.model_factors['Factor']['factor_loadings']\n",
-    "residual_variances = result.model_factors['Factor']['residual_variances']\n",
+    "# factor_loadings = result.model_factors['Factor']['factor_loadings']\n",
+    "# residual_variances = result.model_factors['Factor']['residual_variances']\n",
     "\n",
-    "# Calculate the AVE\n",
-    "ave = sum(factor_loadings**2) / (sum(factor_loadings**2) + sum(residual_variances))\n",
+    "# ave = sum(factor_loadings**2) / (sum(factor_loadings**2) + sum(residual_variances))\n",
     "\n",
-    "# Print the AVE\n",
-    "print(\"Average Variance Extracted (AVE):\", ave)"
+    "# print(\"Average Variance Extracted (AVE):\", ave)"
    ]
   },
   {
