--- a/analyse_2.ipynb
+++ b/analyse_2.ipynb
@@ -5106,6 +5106,294 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validity = df_2.corr().iloc[:,-1].to_frame().transpose()\n",
+    "validity.index = [\"Pearson Correlation Coefficient\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Le temps de cycle actuel du processus d'achat est trop long et complexe</th>\n",
+       "      <th>Le processus d'achat est souvent retardé en raison de la nécessité de demander des approbations supplémentaires</th>\n",
+       "      <th>Les achats sont planifiés en fonction de leur importance et de leur urgence</th>\n",
+       "      <th>Le processus d'achat implique des déplacements et des temps d'attente inutiles</th>\n",
+       "      <th>Le processus d'achat est transparent et facile à comprendre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Pearson Correlation Coefficient</th>\n",
+       "      <td>0.2447</td>\n",
+       "      <td>0.2276</td>\n",
+       "      <td>0.3906</td>\n",
+       "      <td>0.3147</td>\n",
+       "      <td>0.3817</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 Le temps de cycle actuel du processus d'achat est trop long et complexe  \\\n",
+       "Pearson Correlation Coefficient                                             0.2447                         \n",
+       "\n",
+       "                                 Le processus d'achat est souvent retardé en raison de la nécessité de demander des approbations supplémentaires  \\\n",
+       "Pearson Correlation Coefficient                                             0.2276                                                                 \n",
+       "\n",
+       "                                 Les achats sont planifiés en fonction de leur importance et de leur urgence  \\\n",
+       "Pearson Correlation Coefficient                                             0.3906                             \n",
+       "\n",
+       "                                 Le processus d'achat implique des déplacements et des temps d'attente inutiles  \\\n",
+       "Pearson Correlation Coefficient                                             0.3147                                \n",
+       "\n",
+       "                                 Le processus d'achat est transparent et facile à comprendre  \n",
+       "Pearson Correlation Coefficient                                             0.3817            "
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validity.iloc[:,0:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Les demandeurs expriment suffisamment d'informations dans la demande d'achat pour planifier leurs demandes à l'avance</th>\n",
+       "      <th>Le manque de communication efficace entre les départements est une source majeure de gaspillage</th>\n",
+       "      <th>Les délais de livraison des fournisseurs sont respectés</th>\n",
+       "      <th>Le manque de technologie et d'automatisation est une source majeure de gaspillage</th>\n",
+       "      <th>Les méthodes et les logiciels d'analyse de données pour surveiller et améliorer les processus d'achat sont mise en place</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Pearson Correlation Coefficient</th>\n",
+       "      <td>0.4037</td>\n",
+       "      <td>0.4614</td>\n",
+       "      <td>0.4017</td>\n",
+       "      <td>0.3006</td>\n",
+       "      <td>0.5091</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 Les demandeurs expriment suffisamment d'informations dans la demande d'achat pour planifier leurs demandes à l'avance  \\\n",
+       "Pearson Correlation Coefficient                                             0.4037                                                                       \n",
+       "\n",
+       "                                 Le manque de communication efficace entre les départements est une source majeure de gaspillage  \\\n",
+       "Pearson Correlation Coefficient                                             0.4614                                                 \n",
+       "\n",
+       "                                 Les délais de livraison des fournisseurs sont respectés  \\\n",
+       "Pearson Correlation Coefficient                                             0.4017         \n",
+       "\n",
+       "                                 Le manque de technologie et d'automatisation est une source majeure de gaspillage  \\\n",
+       "Pearson Correlation Coefficient                                             0.3006                                   \n",
+       "\n",
+       "                                 Les méthodes et les logiciels d'analyse de données pour surveiller et améliorer les processus d'achat sont mise en place  \n",
+       "Pearson Correlation Coefficient                                             0.5091                                                                         "
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validity.iloc[:,5:10]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Le processus d'achat est-il standardisé pour garantir une qualité constante</th>\n",
+       "      <th>La qualité des produits achetés est constante et conforme aux spécifications attendues</th>\n",
+       "      <th>Les outils et les technologies utilisés dans le processus d'achat contribuent à garantir la qualité des produits achetés</th>\n",
+       "      <th>Les demandeurs expriment suffisamment d'informations dans la demande d'achat pour cerner leurs besoins</th>\n",
+       "      <th>Manque de compréhension des besoins du demandeur auprès des acheteurs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Pearson Correlation Coefficient</th>\n",
+       "      <td>0.3314</td>\n",
+       "      <td>0.3800</td>\n",
+       "      <td>0.4769</td>\n",
+       "      <td>0.3543</td>\n",
+       "      <td>0.3762</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 Le processus d'achat est-il standardisé pour garantir une qualité constante  \\\n",
+       "Pearson Correlation Coefficient                                             0.3314                             \n",
+       "\n",
+       "                                 La qualité des produits achetés est constante et conforme aux spécifications attendues  \\\n",
+       "Pearson Correlation Coefficient                                             0.3800                                        \n",
+       "\n",
+       "                                 Les outils et les technologies utilisés dans le processus d'achat contribuent à garantir la qualité des produits achetés  \\\n",
+       "Pearson Correlation Coefficient                                             0.4769                                                                          \n",
+       "\n",
+       "                                 Les demandeurs expriment suffisamment d'informations dans la demande d'achat pour cerner leurs besoins  \\\n",
+       "Pearson Correlation Coefficient                                             0.3543                                                        \n",
+       "\n",
+       "                                 Manque de compréhension des besoins du demandeur auprès des acheteurs  \n",
+       "Pearson Correlation Coefficient                                             0.3762                      "
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validity.iloc[:,10:15]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Les demandes d'achat sont traitées de manière à répondre aux besoins du demandeur de manière efficace</th>\n",
+       "      <th>Les problèmes de la qualité des produits et services fournis par les fournisseurs actuels sont souvent rencontrés</th>\n",
+       "      <th>Les fournisseurs sont évalués régulièrement en fonction de leur qualité</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Pearson Correlation Coefficient</th>\n",
+       "      <td>0.4724</td>\n",
+       "      <td>0.4493</td>\n",
+       "      <td>0.4593</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 Les demandes d'achat sont traitées de manière à répondre aux besoins du demandeur de manière efficace  \\\n",
+       "Pearson Correlation Coefficient                                             0.4724                                                       \n",
+       "\n",
+       "                                 Les problèmes de la qualité des produits et services fournis par les fournisseurs actuels sont souvent rencontrés  \\\n",
+       "Pearson Correlation Coefficient                                             0.4493                                                                   \n",
+       "\n",
+       "                                 Les fournisseurs sont évalués régulièrement en fonction de leur qualité  \n",
+       "Pearson Correlation Coefficient                                             0.4593                        "
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validity.iloc[:,15:18]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
